# real_study

./: README.md  cpointer  cpointer.c  integral  integral.cpp  pointer  pointer.c  practice_select  practice_select.c  pyproject.toml  timesTable  timesTable.c  win_probability.py
ffapi/: README.md  pyproject.toml
ffapi/src/ffapi/: main.py
mdata/: README.md  pyproject.toml
mdata/data/movies/year=2015/: data.json
mdata/src/mdata/: ml.py
mdata/tests/: test_ml.py
src/study/: main.py
study_movie/: README.md  pyproject.toml
study_movie/src/study_movie/api/: call.py
study_movie/tests/: test_call.py
study_pointer/: pointer2  pointer2.c
