[project]
name = "study"
version = "0.2.1"
description = "Default template for PDM package"
authors = [
    {name = "EstherCho-7", email = "dkgkqm777@gmail.com"},
]
dependencies = [
    "pandas>=2.2.2",
    "pyarrow>=17.0.0",
    "fastapi[standard]>=0.112.0",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
