[project]
name = "ffapi"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "EstherCho-7", email = "dkgkqm777@gmail.com"},
]
dependencies = [
    "fastapi[standard]>=0.112.0",
    "pandas>=2.2.2",
    "pyarrow>=17.0.0",
    "requests>=2.32.3",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
