[project]
name = "mdata"
version = "0.2.0"
description = "Default template for PDM package"
authors = [
    {name = "EstherCho-7", email = "dkgkqm777@gmail.com"},
]
dependencies = []
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}

[tool.pytest.ini_options]
pythonpath="src"

[tool.pdm]
distribution = false
